main/default/objects/Customer_Setting__c/fields/Credit_Class_High__c.field-meta.xml
<CustomField>
    <fullName>Credit_Class_High__c</fullName>
    <label>Credit Class High</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>