main/default/objects/Customer_Setting__c/fields/Market_Area__c.field-meta.xml
<CustomField>
    <fullName>Market_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Market Area</label>
    <referenceTo>Market_Area__c</referenceTo>
    <relationshipLabel>Customer Settings</relationshipLabel>
    <relationshipName>Customer_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>