main/default/objects/Customer_Setting__c/fields/Market_Type__c.field-meta.xml
<CustomField>
    <fullName>Market_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Market Type</label>
    <referenceTo>Customer_Setting__c</referenceTo>
    <relationshipLabel>Customer Settings</relationshipLabel>
    <relationshipName>Customer_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>