main/default/objects/Customer_Setting__c/recordTypes/Bill_Cycle_Schedule.recordType-meta.xml
<RecordType>
    <fullName>Bill_Cycle_Schedule</fullName>
    <active>true</active>
    <label>Bill Cycle Schedule</label>
</RecordType>