main/default/objects/Customer_Setting__c/recordTypes/Care_Organization.recordType-meta.xml
<RecordType>
    <fullName>Care_Organization</fullName>
    <active>true</active>
    <label>Care Organization</label>
</RecordType>