main/default/objects/Customer_Setting__c/recordTypes/Collection_Code.recordType-meta.xml
<RecordType>
    <fullName>Collection_Code</fullName>
    <active>true</active>
    <label>Collection Code</label>
</RecordType>