main/default/objects/Customer_Setting__c/recordTypes/Exchange.recordType-meta.xml
<RecordType>
    <fullName>Exchange</fullName>
    <active>true</active>
    <label>Exchange</label>
</RecordType>