main/default/objects/Customer_Setting__c/recordTypes/Reporting_Company.recordType-meta.xml
<RecordType>
    <fullName>Reporting_Company</fullName>
    <active>true</active>
    <label>Reporting Company</label>
</RecordType>