main/default/objects/Customer_Setting__c/recordTypes/Tax_Information.recordType-meta.xml
<RecordType>
    <fullName>Tax_Information</fullName>
    <active>true</active>
    <label>Tax Information</label>
</RecordType>