main/default/objects/Customer_Setting__c/listViews/Care_org.listView-meta.xml
<ListView>
    <fullName>Care_org</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Reference_ID__c</columns>
    <columns>External_ID__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Customer_Setting__c.Care_Organization</value>
    </filters>
    <label>Care org</label>
</ListView>